# opensearch-protobufs

./: .bazelrc  .gitignore  .whitesource  BUILD.bazel  CHANGELOG.md  COMPATIBILITY.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.py  MAINTAINERS.md  MODULE.bazel  README.md  RELEASING.md  WORKSPACE  build.gradle  codecov.yml  deps.bzl  document_service.proto  generate_go.sh  jest.config.js  package-lock.json  package.json  pom.xml  search_service.proto  version.bzl  version_helper.bzl
.bazelbsp/: bazelbsp.trace.json
.bsp/: bazelbsp.json
.github/: CODEOWNERS
.github/workflows/: backward-compatible-report.yml  build-protobufs-go.yml  build-protobufs-java.yml  build-protobufs-python.yml  cleanup-release.yml  convert-proto.yml  maven-publish.yml  publish-release.yml  release-drafter.yml  remove-pr-branch.yml  test-tools.yml
.ijwb/: .bazelproject
bazel/: grpc_build_system.patch  grpc_extra_deps.patch
jenkins/: release.jenkinsFile
protos/schemas/: BUILD.bazel  common.proto  document.proto  options.proto  search.proto
protos/services/: BUILD.bazel  document_service.proto  ml_service.proto  search_service.proto
protos/tools/models/: aggregated_models.proto
protos/tools/services/: default_service.proto
release-notes/: opensearch-protobufs.release-notes-0.1.0.md  opensearch-protobufs.release-notes-0.10.0.md  opensearch-protobufs.release-notes-0.11.0.md  opensearch-protobufs.release-notes-0.12.0.md  opensearch-protobufs.release-notes-0.13.0.md  opensearch-protobufs.release-notes-0.14.0.md  opensearch-protobufs.release-notes-0.15.0.md  opensearch-protobufs.release-notes-0.16.0.md  opensearch-protobufs.release-notes-0.17.0.md  opensearch-protobufs.release-notes-0.18.0.md  opensearch-protobufs.release-notes-0.19.0.md  opensearch-protobufs.release-notes-0.2.0.md  opensearch-protobufs.release-notes-0.20.0.md  opensearch-protobufs.release-notes-0.21.0.md  opensearch-protobufs.release-notes-0.22.0.md  opensearch-protobufs.release-notes-0.23.0.md  opensearch-protobufs.release-notes-0.24.0.md  opensearch-protobufs.release-notes-0.3.0.md  opensearch-protobufs.release-notes-0.4.0.md  opensearch-protobufs.release-notes-0.6.0.md  opensearch-protobufs.release-notes-0.7.0.md  opensearch-protobufs.release-notes-0.8.0.md  opensearch-protobufs.release-notes-0.9.0.md  opensearch-protobufs.release-notes-1.0.0.md  opensearch-protobufs.release-notes-1.1.0.md  opensearch-protobufs.release-notes-1.2.0.md  opensearch-protobufs.release-notes-1.3.0.md  opensearch-protobufs.release-notes-1.4.0.md  opensearch-protobufs.release-notes-1.5.0.md
tools/: generate_init_files.py  grpc_deps.bzl  package_proto_zip.sh  test_generate_init_files.py
tools/go/: package_proto_go.sh
tools/java/: generate_grpc_java.sh  generate_java.sh  package_proto_jar.sh
tools/proto-convert/src/: Filter.ts  GlobalParamWrapper.ts  OpenSearchVersionExtractor.ts  PreProcessing.ts  ProtoFieldNumberMatcher.ts  Sanitizer.ts  SchemaModifier.ts  TypeModifier.ts  VendorExtensionProcessor.ts
tools/proto-convert/src/config/: protobuf-generator-config.yaml  spec-filter.yaml  target_api.yaml
tools/proto-convert/src/config/protobuf-schema-template/: api.mustache  custom_message.mustache  enum.mustache  field_options.mustache  model.mustache  partial_header.mustache
tools/proto-convert/src/postprocessing/: BackwardCompatibleWriter.ts  CleanupUnusedMessages.ts  CompatibilityMerger.ts  CompatibilityReporter.ts  MergeReporter.ts  parser.ts  types.ts  writer.ts
tools/proto-convert/src/postprocessing/templates/: proto.mustache
tools/proto-convert/src/utils/: OpenApiTraverser.ts  helper.ts  logger.ts
tools/proto-convert/test/: Filter.test.ts  GlobalParamWrapper.test.ts  OpenSearchVersionExtractor.test.ts  PreProcessing.test.ts  Sanitizer.test.ts  SchemaModifier.test.ts  VendorExtensionProcessor.test.ts
tools/proto-convert/test/fixtures/proto/: existing.proto  incoming.proto  test.proto  test_service.proto
tools/proto-convert/test/fixtures/spec/: expected.yaml  petstore.yaml
tools/proto-convert/test/postprocessing/: BackwardCompatibleWriter.test.ts  CleanupUnusedMessages.test.ts  CompatibilityMerger.test.ts  CompatibilityReporter.test.ts  parser.test.ts  writer.test.ts
tools/proto-convert/test/utils/: OpenApiTraverser.test.ts  helper.test.ts
tools/python/: package_proto_wheel.sh  print_modules.py  test_grpc_client.py
