load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@versioning//:version.bzl", "VERSION")
load("@rules_proto_grpc_python//:defs.bzl", "python_proto_library", "python_grpc_library")
load("@rules_python//python:packaging.bzl", "py_wheel")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "java_protos_all",
    visibility = ["//visibility:public"],
    exports = [
        "//protos/schemas:common_java_proto",
        "//protos/schemas:document_java_proto",
        "//protos/schemas:search_java_proto",
        "//protos/services:document_service_java_proto",
        "//protos/services:search_service_java_proto",
    ],
)

python_proto_library(
    name = "python_schemas_all",
    visibility = ["//visibility:public"],
    generate_pyi = True,
    protos = [
        "//protos/schemas:common_proto",
        "//protos/schemas:document_proto",
        "//protos/schemas:search_proto",
    ],
)

python_grpc_library(
    name = "python_protos_all",
    visibility = ["//visibility:public"],
    generate_pyi = True,
    protos = [
        "//protos/services:document_service_proto",
        "//protos/services:search_service_proto",
    ],
    deps = [
        ":python_schemas_all"
    ]
)

go_library(
    name = "go_protos_all",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/schemas:common_go_proto",
        "//protos/schemas:document_go_proto",
        "//protos/schemas:search_go_proto",
        "//protos/services:document_service_go_proto",
        "//protos/services:search_service_go_proto",
    ],
)

"""
Package python libraries into a wheel.
Protoc does not provide a package option for python so we must fix the import statements in these proto files manually:
https://github.com/protocolbuffers/protobuf/issues/7061
https://github.com/protocolbuffers/protobuf/issues/2283
"""

genrule(
    name = "fix_python_imports",
    srcs = [":python_protos_all", ":python_protos_all_pb", ":python_grpc_all", ":python_grpc_all_pb"],
    outs = [
        "opensearch/protobufs/schemas/common_pb2.py",
        "opensearch/protobufs/schemas/common_pb2.pyi",
        "opensearch/protobufs/schemas/document_pb2.py",
        "opensearch/protobufs/schemas/document_pb2.pyi",
        "opensearch/protobufs/schemas/search_pb2.py",
        "opensearch/protobufs/schemas/search_pb2.pyi",
        "opensearch/protobufs/services/document_service_pb2.py",
        "opensearch/protobufs/services/document_service_pb2.pyi",
        "opensearch/protobufs/services/document_service_pb2_grpc.py",
        "opensearch/protobufs/services/document_service_pb2_grpc.pyi",
        "opensearch/protobufs/services/search_service_pb2.py",
        "opensearch/protobufs/services/search_service_pb2.pyi",
        "opensearch/protobufs/services/search_service_pb2_grpc.py",
        "opensearch/protobufs/services/search_service_pb2_grpc.pyi",
        "opensearch/protobufs/schemas/__init__.py",
        "opensearch/protobufs/services/__init__.py",
    ],
    cmd = """
        mkdir -p $(RULEDIR)/opensearch/protobufs/
        cp -rL $(BINDIR)/python_protos_all_pb/protos/schemas $(RULEDIR)/opensearch/protobufs
        cp -rL $(BINDIR)/python_protos_all_pb/protos/services $(RULEDIR)/opensearch/protobufs
        
        # Copy gRPC files over the existing service files
        if [ -d $(BINDIR)/python_grpc_all_pb/protos/services ]; then
            cp -rL $(BINDIR)/python_grpc_all_pb/protos/services/* $(RULEDIR)/opensearch/protobufs/services/
        fi

        # Find and replace "from protos" with "from opensearch.protobufs" in all files
        find $(RULEDIR)/opensearch/protobufs/ -type f -exec sed -i 's/from protos/from opensearch.protobufs/g' {} +
        
        touch $(RULEDIR)/opensearch/protobufs/schemas/__init__.py
        touch $(RULEDIR)/opensearch/protobufs/services/__init__.py
    """,
)

py_wheel(
    name = "opensearch_protos_wheel",
    distribution = "opensearch-protobufs",
    python_tag = "py3",
    version = VERSION,
    requires = [
        "protobuf>=3.20.3",
        "grpcio>=1.68.1",
    ],
    author = "OpenSearch Team",
    license = "Apache-2.0",
    classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3",
    ],
    homepage = "https://opensearch.org/",
    project_urls = {
        "Bug Tracker": "https://github.com/opensearch-project/opensearch-protobufs/issues",
        "Documentation": "https://github.com/opensearch-project/opensearch-protobufs/blob/main/README.md",
        "Source Code": "https://github.com/opensearch-project/opensearch-protobufs",
    },
    platform = "any",
    python_requires = ">=3.10",
    deps = [
        ":fix_python_imports",
    ],
)
