"""
Language and gRPC rules from the actively maintained rules-proto-grpc project.
Python and Java gRPC rules - let bazel mod handle all versions.
"""
bazel_dep(name = "rules_proto_grpc_java", version = "5.7.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.7.0")
bazel_dep(name = "rules_python", version = "1.6.3")

bazel_dep(name = "rules_python", version = "1.6.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
