"""
OpenSearch Protobufs - Bzlmod Configuration
Using Bazel 8.0.1 with rules_proto_grpc 5.8.0
"""

module(
    name = "opensearch_protobufs",
    version = "0.24.0",
)

# Core Bazel rules (using resolved versions from dependency graph)
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Protobuf and gRPC (using resolved versions)
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "grpc", version = "1.74.1", repo_name = "grpc")

# Language-specific proto/grpc rules (required for rules_proto_grpc 5.x)
bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")

# Override grpc-java version to get V2 blocking API (required by rules_proto_grpc_java 5.x)
bazel_dep(name = "grpc-java", version = "1.75.0")

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

# Maven for Java dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.grpc:grpc-netty:1.76.0",
        "io.grpc:grpc-protobuf:1.76.0",
        "io.grpc:grpc-stub:1.76.0",
        "io.grpc:grpc-api:1.76.0",
        "io.grpc:grpc-core:1.76.0",
        "com.google.protobuf:protobuf-java:3.25.8",
        "com.google.guava:guava:32.0.1-android",
        "io.netty:netty-common:4.1.115.Final",
        "io.netty:netty-buffer:4.1.115.Final",
        "io.netty:netty-codec:4.1.115.Final",
        "io.netty:netty-codec-http:4.1.115.Final",
        "io.netty:netty-codec-http2:4.1.115.Final",
        "io.netty:netty-codec-socks:4.1.115.Final",
        "io.netty:netty-handler:4.1.115.Final",
        "io.netty:netty-handler-proxy:4.1.115.Final",
        "io.netty:netty-resolver:4.1.115.Final",
        "io.netty:netty-transport:4.1.115.Final",
        "io.netty:netty-transport-native-unix-common:4.1.115.Final",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")

# Go dependencies
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.5")
