# protos/schemas/BUILD.bazel
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    deps = ["@com_google_protobuf//:struct_proto"],
)

proto_library(
    name = "document_proto",
    srcs = ["document.proto"],
    deps = [
        ":common_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "search_proto",
    srcs = ["search.proto"],
    deps = [
        ":common_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

java_proto_library(
    name = "common_java_proto",
    protos = [":common_proto"],
)

java_proto_library(
    name = "document_java_proto",
    protos = [":document_proto"],
    deps = [":common_java_proto"],
)

java_proto_library(
    name = "search_java_proto",
    protos = [":search_proto"],
    deps = [":common_java_proto"],
)

go_proto_library(
    name = "common_go_proto",
    protos = [":common_proto"],
)

go_proto_library(
    name = "document_go_proto",
    protos = [":document_proto"],
    deps = [":common_go_proto"],
)

go_proto_library(
    name = "search_go_proto",
    protos = [":search_proto"],
    deps = [":common_go_proto"],
)
