# protos/schemas/BUILD.bazel
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_proto_compile", "java_grpc_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_library", "go_grpc_library")
load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    deps = ["@protobuf//:struct_proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "document_proto",
    srcs = ["document.proto"],
    deps = [
        ":common_proto",
        "@protobuf//:struct_proto",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "search_proto",
    srcs = ["search.proto"],
    deps = [
        ":common_proto",
        "@protobuf//:struct_proto",
    ],
    visibility = ["//visibility:public"],
)

# Java
java_proto_compile(
    name = "_common_java_proto_compile",
    protos = [":common_proto"],
)

java_library(
    name = "common_java_proto",
    srcs = [":_common_java_proto_compile"],
    deps = ["@maven//:com_google_protobuf_protobuf_java"],
)

java_proto_compile(
    name = "_document_java_proto_compile",
    protos = [":document_proto"],
)

java_library(
    name = "document_java_proto",
    srcs = [":_document_java_proto_compile"],
    deps = [
        ":common_java_proto",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_proto_compile(
    name = "_search_java_proto_compile",
    protos = [":search_proto"],
)

java_library(
    name = "search_java_proto",
    srcs = [":_search_java_proto_compile"],
    deps = [
        ":common_java_proto",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

# Go - using single package as specified in go_package option
go_proto_library(
    name = "schemas_go_proto",
    importpath = "github.com/opensearch-project/opensearch-protobufs/go/opensearchpb",
    protos = [
        ":common_proto",
        ":document_proto",
        ":search_proto",
    ],
)

# Aliases for backward compatibility
alias(
    name = "common_go_proto",
    actual = ":schemas_go_proto",
)

alias(
    name = "document_go_proto",
    actual = ":schemas_go_proto",
)

alias(
    name = "search_go_proto",
    actual = ":schemas_go_proto",
)
